<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, JSONPreferenceViewActivity!</string>
    <string name="app_name">OMFGB External Addons App</string>
    <string name="refresh" >Refresh</string>
    
     <string name="addons_and_roms">Addons and Roms</string>

    <string name="settings_title">God Mode Settings</string>
    <string name="settings_summary">Custom settings designed for OMFGB</string>

    <string name="addons_title">T3hh4xx0r Addons</string>
    <string name="addons_summary">Various addons availabe for your flashing needs</string>
    
    <string name="nightlies_summary">OMFGB nightlys, remember NO SUPPORT PROVIDED</string>
    <string name="nightlies_title">OMFGB Nightlys</string>
</resources>
