<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
	android:title="@string/addons_and_roms"
	>
	
        <PreferenceScreen android:key="addons"
                android:title="@string/addons_title" 
                android:summary="@string/addons_summary">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.t3hh4xx0r.external.addons"
                    android:targetClass="com.t3hh4xx0r.external.addons.OMFGBExternalAddonsAppActivity" />
        </PreferenceScreen>
        
         <PreferenceScreen android:key="nightlies"
                android:title="@string/nightlies_title" 
                android:summary="@string/nightlies_summary">
        </PreferenceScreen>
        
       </PreferenceCategory> 




       
</PreferenceScreen>

